--- a/style.css
+++ b/style.css
@@ -1,32 +1,24 @@
-:root {
-  --primary-color: lightcoral;
-  --secondary-color: DimGrey;
-  --tertiary-color: Gainsboro;
-}
-
 body {
-  background-color: var(--primary-color);
+  background: linear-gradient(90deg, #5972c2, #314173);
+  color: #120907;
   font-size: 15px;
   font-family: 'Lato', sans-serif;
 }
-
 .container {
   height: 525px;
   width: 360px;
   margin: 100px auto;
-  background: #f7f7f7;
-  box-shadow: 5px 5px 5px var(--tertiary-color);
+  background-color: #5972c2;
   border-radius: 20px;
 }
 .title {
-  background: var(--tertiary-color);
-  color: var(--secondary-color);
+  color: #120907;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   padding: 20px;
   text-transform: uppercase;
   font-size: 18px;
-  font-weight: normal;
+  font-weight: bold;
   text-align: center;
 }
 
@@ -36,13 +28,13 @@ body {
 }
 
 .formInput {
-  background: whitesmoke;
+  background: white;
   width: 40px;
   padding: 5px 5px 8px 8px;
 }
 
 .formInput:focus {
-  border: 3px solid var(--primary-color);
+  border: 3px solid #314173;
   outline: none;
 }
 
@@ -50,17 +42,32 @@ body {
   width: 140px;
   padding: 5px;
   font-size: 12px;
+  background: white;
 }
+
+.formSelect:focus{
+border: 3px solid #314173;
+  outline: none;
+  }
+
 
 .formSubmit {
   text-transform: uppercase;
   font-weight: bold;
   display: block;
   margin: 30px auto;
-  background-color: var(--primary-color);
-  border-radius: 5px;
+  background: linear-gradient(45deg, #5972c2, #314173);
+  border-radius: 20px;
   width: 100px;
   height: 50px;
   font-size: 15px;
-  color: #f7f7f7;
+  color: #120907;
+
+}
+
+#totalTip {
+  font-size: 20px;
+  margin-top: 5px;
+  text-align: center;
+  color: #120907;
 }
